# react-native-webgpu-rs

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  WebgpuRs.podspec  nitro.json  package.json  tsconfig.json
.github/ISSUE_TEMPLATE/: config.yml
android/: CMakeLists.txt  build.gradle  gradle.properties
android/src/main/cpp/: cpp-adapter.cpp
android/src/main/java/com/margelo/nitro/webgpurs/: WebgpuRs.kt  WebgpuRsPackage.kt
android/src/main/java/com/webgpurs/: WebgpuRsPackage.kt
cpp/: WGPUInternalConstants.hpp  WGPUTypeConversions.cpp  WGPUTypeConversions.hpp  WebGPUAdapter.cpp  WebGPUAdapter.hpp  WebGPUBindGroup.cpp  WebGPUBindGroup.hpp  WebGPUBindGroupLayout.cpp  WebGPUBindGroupLayout.hpp  WebGPUBuffer.cpp  WebGPUBuffer.hpp  WebGPUCommandBuffer.cpp  WebGPUCommandBuffer.hpp  WebGPUCommandEncoder.cpp  WebGPUCommandEncoder.hpp  WebGPUComputePassEncoder.cpp  WebGPUComputePassEncoder.hpp  WebGPUComputePipeline.cpp  WebGPUComputePipeline.hpp  WebGPUDevice.cpp  WebGPUDevice.hpp  WebGPUInstance.cpp  WebGPUInstance.hpp  WebGPUPipelineLayout.cpp  WebGPUPipelineLayout.hpp  WebGPUQueue.cpp  WebGPUQueue.hpp  WebGPUSampler.cpp  WebGPUSampler.hpp  WebGPUShaderModule.cpp  WebGPUShaderModule.hpp  WebGPUTexture.cpp  WebGPUTexture.hpp  WebGPUTextureView.cpp  WebGPUTextureView.hpp
example/: app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/ios/: Podfile
example/ios/WebgpuRsExample.xcodeproj/: project.pbxproj
example/ios/WebgpuRsExample.xcworkspace/: contents.xcworkspacedata
example/src/: App.tsx
ios/: WebgpuRs.swift
src/: WebgpuRs.nitro.ts  index.tsx
(+7 files in other folders)
